tests/ui/compile-fail/zeroable/with_comma.stderr
error: unexpected token, expected `}`
  --> tests/ui/compile-fail/zeroable/with_comma.rs:12:34
   |
12 |         ..Zeroable::init_zeroed(),
   |                                  ^
